# gzinfo

./: .editorconfig  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
gzinfo/: __init__.py
tests/: test_gzinfo.py
