[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gzinfo"
version = "1.0.2"
description = "Retrieving archive filename from gz files in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pierre-Selim", email = "pierre-selim@huard.info" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/PierreSelim/gzinfo"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
